--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <h1>授業の課題</h1>
 
 <h2>chapter2</h2>
-<link href="./chaper02/ch02-firsthtml-linux.html>chapter2 link</a>
+<p><link href="./chaper02/ch02-firsthtml-linux.html>chapter2 link</a></p>
 
 </html>
 
