--- a/Task02/index.html
+++ b/Task02/index.html
@@ -28,10 +28,17 @@
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <div class="navbar-nav">
                         <a class="nav-link active" aria-current="page" href="index.html"><i
-                                class="bi bi-house-door"></i> Home</a>
-                        <a class="nav-link" href="#">Features</a>
-                        <a class="nav-link" href="#">Pricing</a>
-                        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+                                class="bi bi-house-door"></i>
+                            Home</a>
+                        <a class="nav-link" href="it-specialist.html"><i class="bi bi-caret-right"></i>
+                            ITスペシャリスト科</a>
+
+                        <a class="nav-link" href="cyber-security.html"><i class="bi bi-caret-right"></i>
+                            サイバーセキュリティ科</a>
+
+                        <a class="nav-link" href="./opencampus.html"><i class="bi bi-caret-right"></i>
+                            オープンキャンパス申込み</a>
+
                     </div>
                 </div>
             </div>
@@ -97,7 +104,7 @@
                                 alt="サイバーセキュリティ科"></a>
                         <div class="card-body">
                             <h5 class="card-title"> <i class="bi bi-caret-right-square-fill"></i> <a
-                                    href="cyber-security.html" class="link-dark text-decoration-none"> ITスペシャリスト科</a>
+                                    href="cyber-security.html" class="link-dark text-decoration-none"> サイバーセキュリティ科</a>
                             </h5>
                             <p class="card-text">ネットワークとセキュリティのプロフェッショナルを目指す！</p>
                         </div>
